src/test/ui/parser/bounds-lifetime-2.stderr
error: expected one of `,`, `:`, or `>`, found `+`
  --> $DIR/bounds-lifetime-2.rs:1:17
   |
LL | type A = for<'a + 'b> fn();
   |                 ^ expected one of `,`, `:`, or `>` here

error: aborting due to previous error

